--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,4 +1,8 @@
-body, textarea, select, input, button {
+body,
+textarea,
+select,
+input,
+button {
   font-size: 12px;
   color: #333;
   font-family: Arial, Helvetica, sans-serif;
