--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,2 +1,17 @@
-@import './common.less';
 @import './reset.less';
+@import './common.less';
+
+.ant-message .ant-message-notice-content {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -30px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+}
+
+:where(.css-dev-only-do-not-override-1rqnfsa).ant-message
+  .ant-message-notice-wrapper
+  .ant-message-notice-content {
+  background-color: rgba(0, 0, 0, 0.7);
+}
